sugar-toolkit (0.79.0-3) UNRELEASED; urgency=low

  * Pass over maintenance of the package to the OLPC team: Change
    Maintainer, and add myself to Uploaders.
  * Fix README.packaging to use "pull; fetch --tags" (not "pull -t").
  * Depend on python-sugar (not sugar-base).
  * Semi-auto-update debian/control to update build-dependencies:
      DEB_AUTO_UPDATE_DEBIAN_CONTROL=yes fakeroot debian/rules clean

 -- Jonas Smedegaard <dr@jones.dk>  Tue, 11 Mar 2008 09:45:54 +0100

sugar-toolkit (0.79.0-2) unstable; urgency=low

  * Depend on sugar-base, python-gtk2, python-dbus, python-gobject,
    python-cairo, python-gnome2-desktop (new enough to include rsvg),
    python-telepathy and python-json.
  * Recommend sugar, sugar-artwork, sugar-datastore,
    sugar-presence-service, sugar-journal-activity and ttf-dejavu-core.
  * Suggest git-core, subversion and ttf-dejavu-extra.
  * Patch sugar/activity/activity.py to work on Python < 2.5 missing
    hashlib module.
  * Update CDBS tweaks:
    + Replace virtual automake1.10 build-dependency with automake
  * Semi-auto-update debian/control to update build-dependencies:
    DEB_AUTO_UPDATE_DEBIAN_CONTROL=yes fakeroot debian/rules clean

 -- Jonas Smedegaard <dr@jones.dk>  Tue, 11 Mar 2008 02:10:15 +0100

sugar-toolkit (0.79.0-1) unstable; urgency=low

  * Initial release. Closes: bug#444021.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 08 Mar 2008 20:57:22 +0100