@@ -1,16 +1,16 @@
 Source: sugar-toolkit
-Section: x11
+Section: python
 Priority: optional
 Maintainer: Debian OLPC <pkg-olpc-devel@lists.alioth.debian.org>
 Uploaders: Jonas Smedegaard <dr@jones.dk>
-Build-Depends: cdbs (>= 0.4.39), autotools-dev, libtool, automake, debhelper (>= 5), devscripts (>= 2.10.7), dh-buildinfo, libglib2.0-dev, python-gtk2-dev, gettext, intltool, libxml-parser-perl, python-central
+Build-Depends: cdbs (>= 0.4.39), python-all-dev (>= 2.3.5-11), python-central (>= 0.6), autotools-dev, libtool, automake, debhelper (>= 5), devscripts (>= 2.10.7), dh-buildinfo, libglib2.0-dev, python-gtk2-dev, gettext, intltool, libxml-parser-perl
 Standards-Version: 3.7.3
 Vcs-Git: git://git.debian.org/git/collab-maint/sugar-toolkit.git
 Vcs-Browser: http://git.debian.org/?p=collab-maint/sugar-toolkit.git;a=summary
 Homepage: http://wiki.laptop.org/go/Sugar
 XS-Python-Version: all
 
-Package: sugar-toolkit
+Package: python-sugar-toolkit
 Architecture: any
 Depends: ${shlibs:Depends}, ${python:Depends}, python-gtk2, python-dbus, python-gobject, python-cairo, python-gnome2-desktop (>= 2.16), python-telepathy, python-json, python-sugar
 Recommends: sugar, sugar-datastore, sugar-presence-service, sugar-journal-service, ttf-dejavu-core
