@@ -1,5 +1,5 @@
 Source: sugar-toolkit
-Section: x11
+Section: python
 Priority: optional
 Maintainer: Debian OLPC <pkg-olpc-devel@lists.alioth.debian.org>
 Uploaders: Jonas Smedegaard <dr@jones.dk>
@@ -10,7 +10,7 @@ Vcs-Browser: http://git.debian.org/?p=collab-maint/sugar-toolkit.git;a=summary
 Homepage: http://wiki.laptop.org/go/Sugar
 XS-Python-Version: all
 
-Package: sugar-toolkit
+Package: python-sugar-toolkit
 Architecture: any
 Depends: ${shlibs:Depends}, ${python:Depends}, python-gtk2, python-dbus, python-gobject, python-cairo, python-gnome2-desktop (>= 2.16), python-telepathy, python-json, python-sugar
 Recommends: sugar, sugar-datastore, sugar-presence-service, sugar-journal-service, ttf-dejavu-core
