@@ -5,30 +5,25 @@
 # NB! Local CDBS tweaks in use. More info in README.cdbs-tweaks
 DEB_AUTO_UPDATE_ACLOCAL = 1.10
 DEB_AUTO_UPDATE_LIBTOOL = pre
+DEB_PYTHON_SYSTEM = pycentral
 include debian/cdbs/1/rules/upstream-tarball.mk
-include /usr/share/cdbs/1/class/autotools.mk
+include debian/cdbs/1/class/py-compile.mk
 include /usr/share/cdbs/1/rules/debhelper.mk
 include debian/cdbs/1/rules/copyright-check.mk
 include debian/cdbs/1/rules/buildinfo.mk
 
-pkg = sugar-toolkit
+pkg = python-sugar-toolkit
 
 DEB_UPSTREAM_URL = http://dev.laptop.org/pub/sugar/sources/$(DEB_UPSTREAM_PACKAGE)
 DEB_UPSTREAM_TARBALL_EXTENSION = tar.bz2
 DEB_UPSTREAM_TARBALL_MD5 = 73bdb8353e5c1d3c0e167f5044f67c11
 
-binary-install/$(pkg)::
-	dh_pycentral
-
 # Drop created dir if empty to please lintian
-binary-post-install/$(pkg)::
-	rmdir --ignore-fail-on-non-empty --parents $(DEB_DESTDIR)/usr/share/locale
+#binary-post-install/$(pkg)::
+#	rmdir --ignore-fail-on-non-empty --parents $(DEB_DESTDIR)/usr/share/locale
 
 # Needed by upstream build process
 CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), libglib2.0-dev, python-gtk2-dev, gettext, intltool, libxml-parser-perl
-
-# Needed for our packaging routines
-CDBS_BUILD_DEPENDS := $(CDBS_BUILD_DEPENDS), python-central
 
 # Replace virtual automake1.10 build-dependency with automake
 CDBS_BUILD_DEPENDS := $(shell echo '$(CDBS_BUILD_DEPENDS)' | sed -e 's/\bautomake1\.10\b/automake/')
